--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My New Hugo Site",
-  "short_name": "My New Hugo Site",
+  "name": "Cainã and Friends Obsidian Notes",
+  "short_name": "Programming Notes",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
